adding population map and updated to other code

--- a/ipynb/useful/TZA_Regions.ipynb
+++ b/ipynb/useful/TZA_Regions.ipynb
@@ -37,7 +37,7 @@
     }
    ],
    "source": [
-    "import pandas as pd  # ✅ Add this import\n",
+    "import pandas as pd  # \n",
     "import geopandas as gpd\n",
     "import fiona\n",
     "import shapely\n",
